Changed branch from main to master

--- a/.env.example
+++ b/.env.example
@@ -26,4 +26,20 @@ REACT_APP_USE_SHAREPOINT_SYNC=false
 # Set to true to use SQL database instead of local storage
 REACT_APP_USE_SQL_DATABASE=false
 # Set to true to use local storage for data persistence
-REACT_APP_USE_LOCAL_STORAGE=true 
+REACT_APP_USE_LOCAL_STORAGE=true
+
+# Firebase Configuration
+REACT_APP_FIREBASE_API_KEY=your-api-key
+REACT_APP_FIREBASE_AUTH_DOMAIN=your-project-id.firebaseapp.com
+REACT_APP_FIREBASE_PROJECT_ID=your-project-id
+REACT_APP_FIREBASE_STORAGE_BUCKET=your-project-id.appspot.com
+REACT_APP_FIREBASE_MESSAGING_SENDER_ID=your-messaging-sender-id
+REACT_APP_FIREBASE_APP_ID=your-app-id
+REACT_APP_FIREBASE_MEASUREMENT_ID=your-measurement-id
+
+# Feature Flags
+REACT_APP_USE_FIRESTORE=true
+REACT_APP_USE_LOCAL_STORAGE=false
+
+# Note: Create a copy of this file named .env and fill in your actual values
+# Do NOT commit the .env file to version control 
