--- a/package.json
+++ b/package.json
@@ -12,6 +12,9 @@
     "@mui/icons-material": "^5.14.16",
     "@mui/material": "^5.14.17",
     "@mui/x-date-pickers": "^6.18.1",
+    "@types/draft-js": "^0.11.18",
+    "@types/draftjs-to-html": "^0.8.4",
+    "@types/html-to-draftjs": "^1.5.0",
     "@types/mssql": "^9.1.7",
     "assert": "^2.1.0",
     "axios": "^1.6.1",
@@ -20,8 +23,11 @@
     "crypto-browserify": "^3.12.1",
     "date-fns": "^2.30.0",
     "dotenv": "^16.4.7",
+    "draft-js": "^0.11.7",
+    "draftjs-to-html": "^0.9.1",
     "events": "^3.3.0",
     "firebase": "^11.4.0",
+    "html-to-draftjs": "^1.5.0",
     "html2canvas": "^1.4.1",
     "http-proxy-middleware": "^3.0.3",
     "jspdf": "^2.5.1",
@@ -31,6 +37,7 @@
     "process": "^0.11.10",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-draft-wysiwyg": "^1.15.0",
     "react-router-dom": "^6.18.0",
     "react-scripts": "5.0.1",
     "stream-browserify": "^3.0.0",
