--- a/package.json
+++ b/package.json
@@ -12,9 +12,6 @@
     "@mui/icons-material": "^5.14.16",
     "@mui/material": "^5.14.17",
     "@mui/x-date-pickers": "^6.18.1",
-    "@types/draft-js": "^0.11.18",
-    "@types/draftjs-to-html": "^0.8.4",
-    "@types/html-to-draftjs": "^1.5.0",
     "@types/mssql": "^9.1.7",
     "assert": "^2.1.0",
     "axios": "^1.6.1",
@@ -74,10 +71,14 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "@types/draft-js": "^0.11.12",
+    "@types/draftjs-to-html": "^0.8.3",
+    "@types/html-to-draftjs": "^1.4.2",
     "@types/jest": "^27.5.2",
     "@types/node": "^16.18.61",
     "@types/react": "^18.2.37",
     "@types/react-dom": "^18.2.15",
+    "@types/react-draft-wysiwyg": "^1.13.5",
     "@types/uuid": "^9.0.7",
     "node-polyfill-webpack-plugin": "^4.1.0",
     "typescript": "^4.9.5"
