--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "http-proxy-middleware": "^3.0.3",
     "jspdf": "^2.5.1",
     "mssql": "^11.0.1",
+    "notistack": "^3.0.2",
     "os-browserify": "^0.3.0",
     "path-browserify": "^1.0.1",
     "process": "^0.11.10",
