--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "draft-js": "^0.11.7",
     "draftjs-to-html": "^0.9.1",
     "events": "^3.3.0",
+    "file-saver": "^2.0.5",
     "firebase": "^11.4.0",
     "html-to-draftjs": "^1.5.0",
     "html2canvas": "^1.4.1",
@@ -74,6 +75,7 @@
     "@testing-library/user-event": "^13.5.0",
     "@types/draft-js": "^0.11.12",
     "@types/draftjs-to-html": "^0.8.3",
+    "@types/file-saver": "^2.0.7",
     "@types/html-to-draftjs": "^1.4.2",
     "@types/jest": "^27.5.2",
     "@types/node": "^16.18.61",
