Export shift report

--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
     "html-to-draftjs": "^1.5.0",
     "html2canvas": "^1.4.1",
     "http-proxy-middleware": "^3.0.3",
-    "jspdf": "^2.5.1",
+    "jspdf": "^2.5.2",
+    "jspdf-autotable": "^5.0.2",
     "mssql": "^11.0.1",
     "notistack": "^3.0.2",
     "os-browserify": "^0.3.0",
